--- a/frameworks/go-gin-server/pkg/rest/server/models/model.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/models/model.go.tmpl
@@ -5,7 +5,7 @@ type {{.CapsResourceNameSingular}} struct {
 {{range $k, $v := .Fields}}
     {{if eq $k "Id"}}
     {{else}}
-    {{$k}} {{$v}} `json:"{{toLowerCase $k}},omitempty"`
+    {{$k}} {{AddPointerIfCompositeField $k}} `json:"{{ToLowerCamelCase $k}},omitempty"`
     {{end}}
 {{end}}
 }
