--- a/frameworks/common-files/go.mod.tmpl
+++ b/frameworks/common-files/go.mod.tmpl
@@ -5,7 +5,8 @@ go 1.20
 require (
 {{if and .IsRestServer .IsGrpcServer}}
     github.com/go-sql-driver/mysql v1.7.1
-	github.com/gin-gonic/gin v1.8.1
+   	go.mongodb.org/mongo-driver v1.12.0
+	github.com/gin-gonic/gin v1.9.1
 	github.com/mattn/go-sqlite3 v1.14.16
 	github.com/prometheus/client_golang v1.13.0
 	github.com/sinhashubham95/go-actuator v1.4.0
@@ -21,7 +22,8 @@ require (
     google.golang.org/protobuf v1.30.0
 {{else if .IsRestServer }}
 	github.com/go-sql-driver/mysql v1.7.1
-	github.com/gin-gonic/gin v1.8.1
+	go.mongodb.org/mongo-driver v1.12.0
+    github.com/gin-gonic/gin v1.9.1
 	github.com/mattn/go-sqlite3 v1.14.16
 	github.com/prometheus/client_golang v1.13.0
 	github.com/sinhashubham95/go-actuator v1.4.0
@@ -34,6 +36,7 @@ require (
     google.golang.org/grpc v1.56.0
 {{else if .IsGrpcServer }}
 	github.com/go-sql-driver/mysql v1.7.1
+	go.mongodb.org/mongo-driver v1.12.0
     github.com/mattn/go-sqlite3 v1.14.16
     github.com/sirupsen/logrus v1.9.0
     google.golang.org/grpc v1.56.0
