--- a/frameworks/common-files/README.md.tmpl
+++ b/frameworks/common-files/README.md.tmpl
@@ -5,10 +5,6 @@
 ### REST Server
 {{end}}
 
-{{if .IsGrpcServer }}
-### gRPC Server
-{{end}}
-
 {{if .IsRestSQLDB }}
     {{if eq .RestSQLDB "MySQL" }}
 ### MySQL Properties for REST
@@ -19,6 +15,22 @@ export MYSQL_DB_PORT=
 export MYSQL_DB_DATABASE=
     {{end}}
 {{end}}
+
+{{if .IsRestNoSQLDB }}
+    {{if eq .RestNoSQLDB "MongoDB" }}
+### MongoDB Properties for REST
+export MONGO_DB_USER=root
+export MONGO_DB_PASSWORD=password
+export MONGO_DB_HOST=localhost
+export MONGO_DB_PORT=27017
+export MONGO_DATABASE=rest-server-db
+    {{end}}
+{{end}}
+
+{{if .IsGrpcServer }}
+### gRPC Server
+{{end}}
+
 {{if .IsGrpcSQLDB }}
     {{if eq .GrpcSQLDB "MySQL" }}
 ### MySQL Properties for gRPC
@@ -27,6 +39,17 @@ export MYSQL_DB_PASSWORD=password
 export MYSQL_DB_HOST=
 export MYSQL_DB_PORT=
 export MYSQL_DB_DATABASE=
+    {{end}}
+{{end}}
+
+{{if .IsGrpcNoSQLDB }}
+    {{if eq .GrpcNoSQLDB "MongoDB" }}
+### MongoDB Properties for gRPC
+export MONGO_DB_USER=root
+export MONGO_DB_PASSWORD=password
+export MONGO_DB_HOST=localhost
+export MONGO_DB_PORT=27017
+export MONGO_DATABASE=grpc-server-db
     {{end}}
 {{end}}
 
