--- a/frameworks/common-files/go.mod.tmpl
+++ b/frameworks/common-files/go.mod.tmpl
@@ -4,6 +4,9 @@ go 1.20
 
 require (
 {{if and .IsRestServer .IsGrpcServer}}
+    gorm.io/driver/mysql v1.5.1
+	gorm.io/driver/sqlite v1.5.2
+	gorm.io/gorm v1.25.2
     github.com/go-sql-driver/mysql v1.7.1
    	go.mongodb.org/mongo-driver v1.12.0
 	github.com/gin-gonic/gin v1.9.1
@@ -21,6 +24,9 @@ require (
     github.com/mattn/go-sqlite3 v1.14.16
     google.golang.org/protobuf v1.30.0
 {{else if .IsRestServer }}
+    gorm.io/driver/mysql v1.5.1
+	gorm.io/driver/sqlite v1.5.2
+	gorm.io/gorm v1.25.2
 	github.com/go-sql-driver/mysql v1.7.1
 	go.mongodb.org/mongo-driver v1.12.0
     github.com/gin-gonic/gin v1.9.1
@@ -35,6 +41,9 @@ require (
 	go.opentelemetry.io/otel/sdk v1.16.0
     google.golang.org/grpc v1.56.0
 {{else if .IsGrpcServer }}
+    gorm.io/driver/mysql v1.5.1
+	gorm.io/driver/sqlite v1.5.2
+	gorm.io/gorm v1.25.2
 	github.com/go-sql-driver/mysql v1.7.1
 	go.mongodb.org/mongo-driver v1.12.0
     github.com/mattn/go-sqlite3 v1.14.16
