--- a/frameworks/go-gin-server/pkg/rest/server/controllers/sqls-controller.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/controllers/sqls-controller.go.tmpl
@@ -4,8 +4,12 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
 	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/services"
+	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/daos/clients/sqls"
 	log "github.com/sirupsen/logrus"
+    "go.opentelemetry.io/otel/attribute"
+    "go.opentelemetry.io/otel/trace"
 	"net/http"
+	"os"
     "strconv"
 )
 
@@ -61,6 +65,10 @@ func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Con
 	// trigger {{.SmallResourceNameSingular}} update
 	if _, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Update{{.CapsResourceNameSingular}}(id, &input); err != nil {
 		log.Error(err)
+        if err == sqls.ErrNotExists {
+            context.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+            return
+        }
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
@@ -80,9 +88,21 @@ func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Con
 	{{.SmallResourceNameSingular}}, err := {{.SmallResourceNameSingular}}Controller.{{.SmallResourceNameSingular}}Service.Get{{.CapsResourceNameSingular}}(id)
 	if err != nil {
 		log.Error(err)
+		if err == sqls.ErrNotExists {
+            context.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+            return
+        }
 		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
+
+	serviceName := os.Getenv("SERVICE_NAME")
+    collectorURL := os.Getenv("OTEL_EXPORTER_OTLP_ENDPOINT")
+    if len(serviceName) > 0 && len(collectorURL) > 0 {
+        // get the current span by the request context
+        currentSpan := trace.SpanFromContext(context.Request.Context())
+        currentSpan.SetAttributes(attribute.String("{{.SmallResourceNameSingular}}.id", strconv.FormatInt({{.SmallResourceNameSingular}}.Id, 10)))
+    }
 
 	context.JSON(http.StatusOK, {{.SmallResourceNameSingular}})
 }
