--- a/frameworks/go-gin-server/pkg/rest/server/daos/clients/sqls/mysql-gorm.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/clients/sqls/mysql-gorm.go.tmpl
@@ -1,13 +1,21 @@
 package sqls
 
 import (
+	"errors"
 	"os"
 	"fmt"
 	"sync"
-
+    "github.com/uptrace/opentelemetry-go-extra/otelgorm"
 	log "github.com/sirupsen/logrus"
 	"gorm.io/driver/mysql"
 	"gorm.io/gorm"
+)
+
+var (
+	ErrDuplicate    = errors.New("record already exists")
+	ErrNotExists    = errors.New("row not exists")
+	ErrUpdateFailed = errors.New("update failed")
+	ErrDeleteFailed = errors.New("delete failed")
 )
 
 var (
@@ -44,6 +52,16 @@ func InitGormMySQLDB() (*MySQLClient, error) {
 		}
 
         db, err = gorm.Open(mysql.New(mySQLConfigs), &gorm.Config{})
+
+        if err == nil {
+            serviceName := os.Getenv("SERVICE_NAME")
+            collectorURL := os.Getenv("OTEL_EXPORTER_OTLP_ENDPOINT")
+            if len(serviceName) > 0 && len(collectorURL) > 0 {
+                if err := db.Use(otelgorm.NewPlugin()); err != nil {
+                    panic(err)
+                }
+            }
+        }
 
         if err != nil {
             log.Debugf("database connection error, %v", err)
