--- a/frameworks/go-gin-server/pkg/rest/server/daos/clients/sqls/mysql.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/clients/sqls/mysql.go.tmpl
@@ -2,6 +2,8 @@ package sqls
 
 import (
 	"database/sql"
+    "github.com/uptrace/opentelemetry-go-extra/otelsql"
+    semconv "go.opentelemetry.io/otel/semconv/v1.20.0"
 	"errors"
 	"os"
 	"time"
@@ -42,7 +44,14 @@ func InitMySQLDB() (*MySQLClient, error) {
 	o.Do(func() {
         dataSource := fmt.Sprintf("%s:%s@tcp(%s:%s)/%s", user, password, host, port, database)
         var db *sql.DB
-        db, err = sql.Open("mysql", dataSource)
+        serviceName := os.Getenv("SERVICE_NAME")
+        collectorURL := os.Getenv("OTEL_EXPORTER_OTLP_ENDPOINT")
+        if len(serviceName) > 0 && len(collectorURL) > 0 {
+            // add opentel
+            db, err = otelsql.Open("mysql", dataSource, otelsql.WithAttributes(semconv.DBSystemMySQL))
+        } else {
+            db, err = sql.Open("mysql", dataSource)
+        }
         if err != nil {
             panic(err)
         }
