--- a/frameworks/go-gin-server/pkg/rest/server/daos/clients/sqls/sqlite.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/clients/sqls/sqlite.go.tmpl
@@ -4,6 +4,8 @@ import (
 	"database/sql"
 	"errors"
 	_ "github.com/mattn/go-sqlite3"
+    "github.com/uptrace/opentelemetry-go-extra/otelsql"
+    semconv "go.opentelemetry.io/otel/semconv/v1.20.0"
 	"os"
 	"sync"
 )
@@ -33,7 +35,16 @@ func InitSqliteDB() (*SQLiteClient, error) {
 		}
 
 		var db *sql.DB
-		db, err = sql.Open("sqlite3", FileName)
+        if err == nil {
+            serviceName := os.Getenv("SERVICE_NAME")
+            collectorURL := os.Getenv("OTEL_EXPORTER_OTLP_ENDPOINT")
+            if len(serviceName) > 0 && len(collectorURL) > 0 {
+                // add opentel
+                db, err = otelsql.Open("sqlite3", FileName, otelsql.WithAttributes(semconv.DBSystemSqlite))
+            } else {
+                db, err = sql.Open("sqlite3", FileName)
+            }
+        }
 		sqliteClient = &SQLiteClient{
 			DB: db,
 		}
