--- a/frameworks/go-gin-server/pkg/rest/server/daos/clients/nosqls/mongodb.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/clients/nosqls/mongodb.go.tmpl
@@ -7,6 +7,8 @@ import (
 	log "github.com/sirupsen/logrus"
 	"go.mongodb.org/mongo-driver/mongo"
 	"go.mongodb.org/mongo-driver/mongo/options"
+    "go.opentelemetry.io/contrib/instrumentation/go.mongodb.org/mongo-driver/mongo/otelmongo"
+
 	"go.mongodb.org/mongo-driver/mongo/readpref"
 	"os"
 	"sync"
@@ -48,7 +50,15 @@ func InitMongoDB() (*MongoDBClient, error) {
 		} else {
 			dataSourceURI = fmt.Sprintf("mongodb://%s:%s@%s:%s", user, password, host, port)
 		}
-		client, mongoDBClientErr = mongo.Connect(context.TODO(), options.Client().ApplyURI(dataSourceURI))
+
+        serviceName := os.Getenv("SERVICE_NAME")
+        collectorURL := os.Getenv("OTEL_EXPORTER_OTLP_ENDPOINT")
+        if len(serviceName) > 0 && len(collectorURL) > 0 {
+            // add opentel
+		    client, mongoDBClientErr = mongo.Connect(context.TODO(), options.Client().ApplyURI(dataSourceURI).SetMonitor(otelmongo.NewMonitor()))
+        } else {
+            client, mongoDBClientErr = mongo.Connect(context.TODO(), options.Client().ApplyURI(dataSourceURI))
+        }
 
 		if mongoDBClientErr != nil {
 			log.Debugf("mongoDBClientErr: %v", mongoDBClientErr)
