fix: rest server's gorm code

--- a/frameworks/go-gin-server/pkg/rest/server/daos/clients/sqls/sqlite-gorm.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/clients/sqls/sqlite-gorm.go.tmpl
@@ -35,13 +35,16 @@ func InitGORMSQLiteDB() (*SQLiteClient, error) {
 
 		var db *gorm.DB
 		db, err = gorm.Open(sqlite.Open(FileName), &gorm.Config{})
-        if err == nil {
-            serviceName := os.Getenv("SERVICE_NAME")
-            collectorURL := os.Getenv("OTEL_EXPORTER_OTLP_ENDPOINT")
-            if len(serviceName) > 0 && len(collectorURL) > 0 {
-                if err := db.Use(otelgorm.NewPlugin()); err != nil {
-                    panic(err)
-                }
+        if err != nil {
+            log.Debugf("database connection error, %v", err)
+            os.Exit(1)
+        }
+        serviceName := os.Getenv("SERVICE_NAME")
+        collectorURL := os.Getenv("OTEL_EXPORTER_OTLP_ENDPOINT")
+        if len(serviceName) > 0 && len(collectorURL) > 0 {
+            if err := db.Use(otelgorm.NewPlugin()); err != nil {
+                log.Debugf("unable to attach opentel plugin error, %v", err)
+                os.Exit(1)
             }
         }
 
