--- a/frameworks/go-gin-server/pkg/rest/server/daos/clients/sqls/sqlite.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/clients/sqls/sqlite.go.tmpl
@@ -3,6 +3,7 @@ package sqls
 import (
 	"database/sql"
 	"errors"
+    log "github.com/sirupsen/logrus"
 	_ "github.com/mattn/go-sqlite3"
     "github.com/uptrace/opentelemetry-go-extra/otelsql"
     semconv "go.opentelemetry.io/otel/semconv/v1.20.0"
@@ -19,7 +20,7 @@ var (
 
 var o sync.Once
 
-const FileName = "sqlite.db"
+const FileName = "rest-sqlite.db"
 
 type SQLiteClient struct {
 	DB *sql.DB
@@ -34,8 +35,8 @@ func InitSqliteDB() (*SQLiteClient, error) {
 			err = os.Remove(FileName)
 		}
 
-		var db *sql.DB
-        if err == nil {
+        if err != nil {
+            var db *sql.DB
             serviceName := os.Getenv("SERVICE_NAME")
             collectorURL := os.Getenv("OTEL_EXPORTER_OTLP_ENDPOINT")
             if len(serviceName) > 0 && len(collectorURL) > 0 {
@@ -44,10 +45,15 @@ func InitSqliteDB() (*SQLiteClient, error) {
             } else {
                 db, err = sql.Open("sqlite3", FileName)
             }
+            if err != nil {
+                log.Debugf("database connection error, %v", err)
+                os.Exit(1)
+            }
+            sqliteClient = &SQLiteClient{
+                DB: db,
+            }
         }
-		sqliteClient = &SQLiteClient{
-			DB: db,
-		}
+
 	})
 
 	return sqliteClient, err
