--- a/frameworks/common-files/go.mod.tmpl
+++ b/frameworks/common-files/go.mod.tmpl
@@ -8,25 +8,30 @@ require (
 	gorm.io/driver/sqlite v1.5.2
 	gorm.io/gorm v1.25.2
     github.com/go-sql-driver/mysql v1.7.1
-   	go.mongodb.org/mongo-driver v1.12.0
+   	go.mongodb.org/mongo-driver v1.12.1
 	github.com/gin-gonic/gin v1.9.1
 	github.com/mattn/go-sqlite3 v1.14.16
 	github.com/prometheus/client_golang v1.13.0
 	github.com/sinhashubham95/go-actuator v1.4.0
-	github.com/sirupsen/logrus v1.9.0
+	github.com/sirupsen/logrus v1.9.3
     go.opentelemetry.io/contrib/instrumentation/go.mongodb.org/mongo-driver/mongo/otelmongo v0.42.0
 	go.opentelemetry.io/contrib/instrumentation/github.com/gin-gonic/gin/otelgin v0.36.4
+    go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc v0.42.0
+    github.com/uptrace/opentelemetry-go-extra/otelgorm v0.2.2
 	go.opentelemetry.io/otel v1.16.0
 	go.opentelemetry.io/otel/exporters/otlp/otlptrace v1.16.0
 	go.opentelemetry.io/otel/exporters/otlp/otlptrace/otlptracegrpc v1.16.0
 	go.opentelemetry.io/otel/sdk v1.16.0
-    google.golang.org/grpc v1.56.0
-    google.golang.org/protobuf v1.30.0
+    google.golang.org/grpc v1.57.0
+    google.golang.org/protobuf v1.31.0
     github.com/mattn/go-sqlite3 v1.14.16
     google.golang.org/protobuf v1.30.0
     go.opentelemetry.io/otel/trace v1.16.0
     github.com/uptrace/opentelemetry-go-extra/otelsql v0.2.2
 {{else if .IsRestServer }}
+    github.com/go-sql-driver/mysql v1.7.1
+    gorm.io/driver/mysql v1.5.1
+	gorm.io/driver/sqlite v1.5.2
 	github.com/gin-gonic/gin v1.9.1
 	github.com/mattn/go-sqlite3 v1.14.17
 	github.com/prometheus/client_golang v1.13.0
@@ -42,15 +47,22 @@ require (
 	go.opentelemetry.io/otel/trace v1.16.0
 	google.golang.org/grpc v1.56.0
 {{else if .IsGrpcServer }}
+    github.com/go-sql-driver/mysql v1.7.1
     gorm.io/driver/mysql v1.5.1
+	github.com/mattn/go-sqlite3 v1.14.16
 	gorm.io/driver/sqlite v1.5.2
-	gorm.io/gorm v1.25.2
-	github.com/go-sql-driver/mysql v1.7.1
-	go.mongodb.org/mongo-driver v1.12.0
-    github.com/mattn/go-sqlite3 v1.14.16
-    github.com/sirupsen/logrus v1.9.0
-    google.golang.org/grpc v1.56.0
-    google.golang.org/protobuf v1.30.0
+	github.com/uptrace/opentelemetry-go-extra/otelsql v0.2.2
+    github.com/sirupsen/logrus v1.9.3
+    go.mongodb.org/mongo-driver v1.12.1
+    github.com/uptrace/opentelemetry-go-extra/otelgorm v0.2.2
+    go.opentelemetry.io/contrib/instrumentation/go.mongodb.org/mongo-driver/mongo/otelmongo v0.42.0
+    go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc v0.42.0
+    go.opentelemetry.io/otel v1.16.0
+    go.opentelemetry.io/otel/exporters/otlp/otlptrace v1.16.0
+    go.opentelemetry.io/otel/exporters/otlp/otlptrace/otlptracegrpc v1.16.0
+    go.opentelemetry.io/otel/sdk v1.16.0
+    google.golang.org/grpc v1.57.0
+    google.golang.org/protobuf v1.31.0
 {{end}}
 )
 
