--- a/frameworks/go-gin-server/pkg/rest/server/daos/clients/sqls/sqlite-gorm.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/clients/sqls/sqlite-gorm.go.tmpl
@@ -5,6 +5,7 @@ import (
 	"gorm.io/driver/sqlite"
     "github.com/uptrace/opentelemetry-go-extra/otelgorm"
 	"gorm.io/gorm"
+	log "github.com/sirupsen/logrus"
 	"os"
 	"sync"
 )
@@ -18,7 +19,7 @@ var (
 
 var o sync.Once
 
-const FileName = "sqlite.db"
+const FileName = "rest-sqlite.db"
 
 type SQLiteClient struct {
 	DB *gorm.DB
@@ -33,24 +34,27 @@ func InitGORMSQLiteDB() (*SQLiteClient, error) {
 			err = os.Remove(FileName)
 		}
 
-		var db *gorm.DB
-		db, err = gorm.Open(sqlite.Open(FileName), &gorm.Config{})
         if err != nil {
-            log.Debugf("database connection error, %v", err)
-            os.Exit(1)
-        }
-        serviceName := os.Getenv("SERVICE_NAME")
-        collectorURL := os.Getenv("OTEL_EXPORTER_OTLP_ENDPOINT")
-        if len(serviceName) > 0 && len(collectorURL) > 0 {
-            if err := db.Use(otelgorm.NewPlugin()); err != nil {
-                log.Debugf("unable to attach opentel plugin error, %v", err)
+            var db *gorm.DB
+            db, err = gorm.Open(sqlite.Open(FileName), &gorm.Config{})
+            if err != nil {
+                log.Debugf("database connection error, %v", err)
                 os.Exit(1)
+            }
+            serviceName := os.Getenv("SERVICE_NAME")
+            collectorURL := os.Getenv("OTEL_EXPORTER_OTLP_ENDPOINT")
+            if len(serviceName) > 0 && len(collectorURL) > 0 {
+                if err := db.Use(otelgorm.NewPlugin()); err != nil {
+                    log.Debugf("unable to attach opentel plugin error, %v", err)
+                    os.Exit(1)
+                }
+            }
+
+            sqliteClient = &SQLiteClient{
+                DB: db,
             }
         }
 
-		sqliteClient = &SQLiteClient{
-			DB: db,
-		}
 	})
 
 	return sqliteClient, err
