--- a/frameworks/go-grpc-server/pkg/grpc/server/controllers/sqls-controller.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/controllers/sqls-controller.go.tmpl
@@ -2,6 +2,10 @@ package controllers
 
 import (
 	"context"
+    "go.opentelemetry.io/otel/attribute"
+    "go.opentelemetry.io/otel/trace"
+    "os"
+    "strconv"
 
 	pb "github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/gen/api/v1"
 	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/services"
@@ -50,7 +54,7 @@ func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server)
 }
 
 
-func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server) Get{{.CapsResourceNameSingular}}(_ context.Context, req *pb.Get{{.CapsResourceNameSingular}}Request) (*pb.Get{{.CapsResourceNameSingular}}Response, error) {
+func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server) Get{{.CapsResourceNameSingular}}(ctx context.Context, req *pb.Get{{.CapsResourceNameSingular}}Request) (*pb.Get{{.CapsResourceNameSingular}}Response, error) {
     id := req.GetId()
 	retrieved{{.CapsResourceNameSingular}}, err := {{.SmallResourceNameSingular}}Server.{{.SmallResourceNameSingular}}Service.Get{{.CapsResourceNameSingular}}(id)
 
@@ -67,6 +71,14 @@ func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server)
             {{end}}
         {{end}}
 	}
+
+	serviceName := os.Getenv("SERVICE_NAME")
+    collectorURL := os.Getenv("OTEL_EXPORTER_OTLP_ENDPOINT")
+    if len(serviceName) > 0 && len(collectorURL) > 0 {
+        // get the current span by the request context
+        currentSpan := trace.SpanFromContext(ctx)
+        currentSpan.SetAttributes(attribute.String("{{.SmallResourceNameSingular}}.id", strconv.FormatInt(retrieved{{.CapsResourceNameSingular}}.Id, 10)))
+    }
 
 	return &pb.Get{{.CapsResourceNameSingular}}Response{
 		{{.CapsResourceNameSingular}}: {{.SmallResourceNameSingular}}Response,
