--- a/frameworks/go-grpc-server/pkg/grpc/server/daos/clients/sqls/sqlite.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/daos/clients/sqls/sqlite.go.tmpl
@@ -3,7 +3,10 @@ package sqls
 import (
 	"database/sql"
 	"errors"
+	log "github.com/sirupsen/logrus"
 	_ "github.com/mattn/go-sqlite3"
+    "github.com/uptrace/opentelemetry-go-extra/otelsql"
+    semconv "go.opentelemetry.io/otel/semconv/v1.20.0"
 	"os"
 	"sync"
 )
@@ -17,7 +20,7 @@ var (
 
 var o sync.Once
 
-const FileName = "sqlite.db"
+const FileName = "grpc-sqlite.db"
 
 type SQLiteClient struct {
 	DB *sql.DB
@@ -32,11 +35,24 @@ func InitSqliteDB() (*SQLiteClient, error) {
 			err = os.Remove(FileName)
 		}
 
-		var db *sql.DB
-		db, err = sql.Open("sqlite3", FileName)
-		sqliteClient = &SQLiteClient{
-			DB: db,
-		}
+        if err != nil {
+            var db *sql.DB
+            serviceName := os.Getenv("SERVICE_NAME")
+            collectorURL := os.Getenv("OTEL_EXPORTER_OTLP_ENDPOINT")
+            if len(serviceName) > 0 && len(collectorURL) > 0 {
+                // add opentel
+                db, err = otelsql.Open("sqlite3", FileName, otelsql.WithAttributes(semconv.DBSystemSqlite))
+            } else {
+                db, err = sql.Open("sqlite3", FileName)
+            }
+            if err != nil {
+                log.Debugf("database connection error, %v", err)
+                os.Exit(1)
+            }
+            sqliteClient = &SQLiteClient{
+                DB: db,
+            }
+        }
 	})
 
 	return sqliteClient, err
